[gd_scene load_steps=2 format=3 uid="uid://csvqevak0ned0"]

[ext_resource type="Script" uid="uid://dgin7g4gnbxqf" path="res://scripts/ui/RadioPlayer.gd" id="1_hl3d5"]

[node name="RadioPlayer" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 40.0
script = ExtResource("1_hl3d5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 0.5)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 30.0
offset_bottom = 35.0
text = "▶"

[node name="NextButton" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 35.0
text = "⏭"

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 15.0
offset_right = 95.0
offset_bottom = 25.0
max_value = 1.0
step = 0.05
value = 0.5
